# lorica

./: .cproject  .project  AUTHORS  ChangeLog  Makefile.am  Microsoft.VC90.DebugCRT.manifest  README  acinclude.m4  autogen.sh  bootstrap  brutus-lorica-install.wsi  build.sh  configure.ac  configure.in  lorica-install-debug.wsi  lorica-install.wsi  lorica.mwc  lorica.spec.in  release.sh
MPC/config/: lorica_ssliop.mpb  loricacommon.mpb
acetao/: Makefile.am  acetao_svn_update.sh
apple/: build
apple/diskimage/: DS_Store  SLA.bz2  build
apple/installer/: build  com.42tools.lorica.plist
apple/installer/resources/: License.rtf  ReadMe.rtf
apple/installer/scripts/: postflight
apple/uninstaller/: build  main.m  uninstallWrapper.h  uninstallWrapper.m
apple/uninstaller/resources/: uninstall.tool
configurations/: README
configurations/brutus_server/: lorica.conf
configurations/evolution-brutus/: lorica.conf  lorica.conf.evolution-brutus
deb/: Makefile.am  changelog.pre  control.in  copyright.in  lorica-dev.install.in  lorica.install.in  rules  version.sed.in  watch.in
defines/: Makefile.am  build-system-defs.h  hardcoded-defs.h  windefs.h
docs/: Lorica_Dev_Guide.odt  Makefile.am  building_lorica  building_lorica.txt  lorica_configuration  lorica_configuration.txt  using_the_generic_evaluator.txt
ebuild/: ChangeLog  Makefile.am  lorica.ebuild.in
init_rc/: Makefile.am  gentoo.confd.in  gentoo.initd  rhel.initd  ubuntu.initd
m4/: acetao.m4  check_compiler_option.m4  checkbuild.m4  checkpic.m4  checkstl.m4  compiler.m4  cs_check_host.m4  emit.m4  jamcache.m4  language.m4  platform_adapt.m4  split.m4  textcache.m4  trim.m4  visibility.m4  warnings.m4
packagemaker/: DS_Store  Info.plist  License.rtf  ReadMe.rtf  com.42tools.lorica.plist  make_dmg  postflight  uninstall.tool
packagemaker/lorica.pmdoc/: 01autom-contents.xml  01autom.xml  index.xml
src/: Makefile.am  loricacommon.mpb
src/OCI/: AsynchProxyTools.mpc  AsynchProxyTools.vcproj  Makefile.am  OperationTable.cpp  OperationTable.h  ProxyReplyHandler.cpp  ProxyReplyHandler.h  ProxyServant.cpp  ProxyServant.h
src/lorica/: Config.cpp  Config.h  ConfigBase.cpp  ConfigBase.h  EvaluatorBase.cpp  EvaluatorBase.h  EvaluatorLoader.cpp  EvaluatorLoader.h  FileConfig.cpp  FileConfig.h  GenericEvaluator.cpp  GenericEvaluator.h  GenericLoader.cpp  GenericLoader.h  GenericMapper.cpp  GenericMapper.h  IFRService.cpp  IFRService.h  Makefile.am  MapperRegistry.cpp  MapperRegistry.h  NullProxyMapper.cpp  NullProxyMapper.h  ProxyMapper.cpp  ProxyMapper.h  ProxyReplyHandler.cpp  ProxyReplyHandler.h  ProxyServant.cpp  ProxyServant.h  RMVByMapped.cpp  RMVByMapped.h  RMVByNative.cpp  RMVByNative.h  ReferenceMapValue.cpp  ReferenceMapValue.h  ReferenceMapper.idl  ServerAgent.idl  ServerAgent_impl.cpp  ServerAgent_impl.h  debug.cpp  (+7 more)
src/proxy/: Makefile.am  ReferenceMapper_i.cpp  ReferenceMapper_i.h  UNIX_svc_loader.cpp  UNIX_svc_loader.h  Win32_svc_loader.cpp  Win32_svc_loader.h  lorica.conf  lorica.conf.ifr-client.sample  lorica.conf.sample  main.cpp  ntsvc.cpp  ntsvc.h  proxy.cpp  proxy.h  proxy.mpc  proxy.rc  proxy.vcproj  svc_loader_base.cpp  svc_loader_base.h
tests/: Makefile  Makefile.am  Makefile.in  lorica_tests.lst
tests/exception/: Hello.cpp  Hello.h  Makefile  Makefile.Exception_Client.am  Makefile.Exception_Server.am  Makefile.am  Makefile.exception_idl.am  Makefile.in  Test.idl  TestC.cpp  TestC.h  client  client.cpp  exception.mpc  run_test.pl  server  server.cpp
tests/exception/.deps/: client-client.Po
tests/fileConfig/: Makefile  Makefile.am  Makefile.fileConfig.am  Makefile.in  fileConfig.mpc  main.cpp  test
tests/fileConfig/.deps/: test-main.Po
tests/garbageCollector/: Hello.cpp  Hello.h  Makefile.am  Test.idl  client.cpp  garbageCollector.mpc  run_test.pl  server.cpp
tests/genericEvaluator/: Makefile  Makefile.am  Makefile.in
tests/genericEvaluator/3-way-callback/: 3-way-callback.mpc  Callback_i.cpp  Callback_i.h  Makefile.am  Receiver_i.cpp  Server_i.cpp  Server_i.h  Test.idl  callback.mpc  client.cpp  lorica-client.conf  lorica-server.conf  run_test.pl  server.cpp
tests/genericEvaluator/basic/: Makefile  Makefile.GenericEvaluator_Basic_Client.am  Makefile.GenericEvaluator_Basic_Server.am  Makefile.am  Makefile.in  basic.mpc  client  run_test.pl  server  server.cpp  test.idl  testC.inl  testS.cpp  test_i.h
tests/genericEvaluator/basic_collocate/: Makefile  (+19 more)
tests/genericEvaluator/persistence_ifr/: Makefile  Makefile.GenericEvaluator_Persistence_Client.am  Makefile.GenericEvaluator_Persistence_Server.am  Makefile.am  Makefile.in  client  persistence_ifr.mpc  run_test.pl  server  server.cpp  test.idl  testC.h  test_i.cpp
tests/genericEvaluator/persistence_ifr/.deps/: server-server.Po
tests/mapForClient/: Makefile  Makefile.MapForClient_Client.am  Makefile.MapForClient_Idl.am  Makefile.MapForClient_Server.am  Makefile.am  Makefile.in  README  Test.idl  client  client.cpp  mapForClient.mpc  run_test.pl  server  server.cpp
tests/mapForClientWithCorbaloc/: Hello.cpp  Hello.h  Makefile.am  Test.idl  client.cpp  mapForClientWithCorbaloc.mpc  run_test.pl  server.cpp
tests/mapForClientWithObjectID/: Makefile.am  Test.idl  client.cpp  run_test.pl  server.cpp
tests/mapForServer/: Hello.cpp  Hello.h  Makefile  Makefile.MapForServer_Client.am  Makefile.MapForServer_Idl.am  Makefile.MapForServer_Server.am  Makefile.am  Makefile.in  TestC.h  TestS.cpp  client  client.cpp  run_test.pl  server  server.cpp
tests/secureBridge/: Hello.cpp  Makefile  Makefile.SecureBridge_Client.am  Makefile.SecureBridge_Idl.am  Makefile.SecureBridge_Server.am  Makefile.am  Makefile.in  client  client.cpp  east.conf  run_test.pl  secureBridge.mpc  server  server.cpp  west.conf
tests/secureInvocation/: Hello.cpp  Hello.h  Makefile  Makefile.SecureInvocation_Client.am  Makefile.SecureInvocation_Idl.am  Makefile.SecureInvocation_Server.am  Makefile.am  Makefile.in  TestC.cpp  TestS.h  client  client.cpp  run_test.pl  secureInvocation.mpc  server  server.cpp
utils/ior_mapper/: ior_mapper.cpp  ior_mapper.mpc
(+160 files in other folders)
